force-app/main/default/objects/Parent_Child__c.object
<CustomObject>
    <fields>
        <fullName>ChildAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parent Accounts</relationshipLabel>
        <relationshipName>Additional_Parent_Child_ChildAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChildType__c</fullName>
        <formula>TEXT(ChildAccount__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ChildType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccount__c</fullName>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Child Accounts</relationshipLabel>
        <relationshipName>Additional_Parent_Child_ParentAccount</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ParentChildId__c</fullName>
        <externalId>true</externalId>
        <label>ParentChildId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ParentType__c</fullName>
        <formula>TEXT(ParentAccount__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Parent Child</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Parent Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>